--- a/AreaStudente/Views/Studenti/Immatricolati.cshtml
+++ b/AreaStudente/Views/Studenti/Immatricolati.cshtml
@@ -85,7 +85,7 @@
 							</div>
 						</div>
 						<div class="text-center">
-							<button type="submit" class="btn btn-primary" style="width: 179px;">Salva</button>
+							<button type="submit" class="btn btn-primary" style="width: 179px;">Conferma</button>
 						</div>
 					</div>
 				</div>
