--- a/AreaPubblica/Views/ComeFunziona/Index.cshtml
+++ b/AreaPubblica/Views/ComeFunziona/Index.cshtml
@@ -1,7 +1,9 @@
 ﻿<div style="height:15vh;"></div>
-<div class="row">
-	<div class="col-2"></div>
-	<div class="col-10">
+	@* <div class="col-2"></div> *@
+<div class="ms-5 mt-4">
+	<div>
+
+
 		<h1 style="font-size:60px;"> Come Funziona?</h1>
 
 		<p>
@@ -11,7 +13,7 @@
 			Tutto è pensato per offrirti un’esperienza formativa completa, accessibile e sempre al passo con le tue esigenze.
 		</p>
 
-		@* punto 1*@
+			@* punto 1*@
 
 		<div class="mb-5">
 			<h3><strong>1. Come funzionano le lauree e le magistrali</strong></h3><br>
@@ -26,15 +28,15 @@
 
 			<ul>
 
-				<li>diploma di maturità quinquennale;</li>
+				<li>Diploma di maturità quinquennale;</li>
 				<li>
-					diploma di maturità quadriennale con anno integrativo.
+					Diploma di maturità quadriennale con anno integrativo.
 					Nel caso in cui il diploma sia rilasciato da istituti che non prevedevano l’anno integrativo, contatta la Segreteria studenti;
 				</li>
-				<li>titolo estero valido.</li>
+				<li>Titolo estero valido.</li>
 			</ul>
 
-			
+
 
 
 			<p class="fw-bold">Per le Lauree Magistrali è richiesto uno dei seguenti titoli:</p>
@@ -53,16 +55,16 @@
 
 			Modalità di accesso:<br />
 			I corsi (Lauree, Lauree Magistrali a ciclo unico, Lauree Magistrali) possono essere a numero programmato (a livello locale o nazionale) oppure ad accesso libero <br />
-			
-			
-			<p class="fw-bold">L’iscrizione avviene in due fasi successive</p>:
+
+
+			<p class="fw-bold">L’iscrizione avviene in due fasi successive:</p>
 			<ul>
-				<li>la registrazione</li>
-				<li>l’immatricolazione</li>
+				<li>La registrazione</li>
+				<li>L’immatricolazione</li>
 			</ul>
 		</div>
 
-		@* punto 2 *@
+			@* punto 2 *@
 
 		<div class="mb-5">
 			<h3><strong>2. Scelta piano di studi personale</strong></h3><br>
@@ -73,7 +75,7 @@
 
 		</div>
 
-		@* punto 3 *@
+			@* punto 3 *@
 
 		<div class="mb-5">
 			<h3><strong>3. Iscrizione nell'area pubblica</strong></h3><br>
@@ -83,28 +85,23 @@
 			Queste informazioni sono <strong>necessarie</strong>  per creare il <strong>tuo profilo studente</strong> e per <strong>comunicare con te</strong> durante il tuo percorso accademico.<br>
 			È possibile effettuare la registrazione al sito UniGen direttamente da questo <a class="text-primary" asp-area="" asp-controller="Login" asp-action="Register">link</a>
 			La registrazione <strong>non implica</strong> alcun impegno <strong>vincolante per l'immatricolazione</strong>.
-					
+
 
 		</div>
 
-		@* punto 4 *@
+			@* punto 4 *@
 
 		<div class="mb-5">
 			<h3><strong>4. Immatricolazione</strong></h3><br>
 			<h5>Come immatricolarsi?</h5>
 			È possibile <strong>immatricolarsi</strong> ai corsi di Laurea dell’UniGen direttamente dal
 			pc di casa utilizzando la procedura online disponibile sul sito dell'Ateneo. <br>
-			Dopo essersi <strong>registrati</strong>, occorre <strong>accedere al proprio</strong> profilo per effettuare l'immatricolazione.
-			Una volta caricarti i file richiesti e pagata la rata di iscrizione,si verrà contattati dalla segreteria per la conferma dell'iscrizione al corso di laurea scelto.
+			Dopo essersi <strong>registrati</strong>, occorre <strong>accedere al proprio</strong> profilo per effettuare l'immatricolazione. <br />
+			Una volta caricarti i file richiesti e pagata la rata di iscrizione,si verrà contattati dalla segreteria per la conferma dell'iscrizione al corso di laurea scelto.<br />
 			In caso di esito positivo, dalla propria area profilo, sarà possibile accedere all'area lavoro per seguire le lezione e per la prenotazione degli esami.
 		</div>
 
-
-
-
-
-
-		@* punto 5 *@
+			@* punto 5 *@
 		<div class="mb-5">
 			<h3><strong>5.Come funzionano le videolezioni</strong></h3><br>
 			Le lezioni saranno disponibili in <strong>modalità teledidattica </strong>e verranno <strong>registrate e caricate dai docenti</strong> per la fruizione in differita. <br />
@@ -112,24 +109,24 @@
 		</div>
 
 
-		@* punto 6 *@
+			@* punto 6 *@
 		<div class="mb-5">
 			<h3><strong>6. Come funzionano gli esami</strong></h3><br>
 			Sarà possibile iscriversi agli esami <strong>dalla propria area lavoro</strong>. <br />
-			Gli esami potranno essere <strong>orali</strong>, <strong>scritti</strong> a <strong>domande aperte </strong>o a <strong>domande chiuse</strong>, a discrezione del docente e dell'esame in questione.
-			Verranno forniti <strong>link</strong> rispettivamente a una videochiamata o al test scritto da effettuare.
+			Gli esami potranno essere <strong>orali</strong>, <strong>scritti</strong> a <strong>domande aperte </strong>o a <strong>domande chiuse</strong>, a discrezione del docente e dell'esame in questione. <br />
 		</div>
 
-		@* punto 7 *@
+			@* punto 7 *@
 
 		<div class="mb-5">
-			<h3><strong>Come funziona la scelta dei corsi?</strong></h3><br>
+			<h3><strong>7. Come funziona la scelta dei corsi?</strong></h3><br>
 			La UniGen di Generation propone una <strong>vasta gamma di corsi</strong> che ti permettono di costruire un piano di studi su misura, in base ai tuoi
-			<strong>interessi</strong>, <strong>obiettivi professionali</strong> e <strong>percorso accademico</strong>. Che tu scelga una <strong>laurea triennale</strong>,
-			<strong>magistrale</strong> o <strong>a ciclo unico</strong>, hai la possibilità di <strong>personalizzare il tuo percorso</strong> selezionando gli
-			<strong>insegnamenti opzionali</strong> più affini alle tue aspirazioni. In questo modo, ogni studente può <strong>valorizzare le proprie inclinazioni</strong>
+			<strong>interessi</strong>, <strong>obiettivi professionali</strong> e <strong>percorso accademico</strong>.
+			Che tu scelga una <strong>laurea triennale</strong>, <strong>magistrale</strong> o <strong>a ciclo unico</strong>, hai la possibilità di <strong>personalizzare il tuo percorso</strong> selezionando gli
+			<strong>insegnamenti opzionali</strong> più affini alle tue aspirazioni. <br />In questo modo, ogni studente può <strong>valorizzare le proprie inclinazioni</strong>
 			e costruire una <strong>formazione realmente centrata sulle proprie ambizioni future</strong>.
 
 		</div>
 	</div>
 </div>
+
