--- a/AreaPubblica/Views/Contatti/Index.cshtml
+++ b/AreaPubblica/Views/Contatti/Index.cshtml
@@ -16,33 +16,33 @@
 			<div class="col-md-8">
 				<div class="d-flex flex-column align-items-start">
 					<div class="w-100">
-						<h1 class="alert-dark mb-4">Contatti</h1>
+						<h1 class=" mb-4">Contatti</h1>
 
-						<h4 class="alert-dark fw-normal mt-4">Centralino</h4>
+						<h4 class=" fw-normal mt-4">Centralino</h4>
 						<h5 class="fw-light">
 							Tel +39 0123 456 789<br>
 							email: centralino@unigen.it
 						</h5>
 
-						<h4 class="alert-dark fw-normal mt-4">URP Unità Relazioni con il Pubblico</h4>
+						<h4 class=" fw-normal mt-4">URP Unità Relazioni con il Pubblico</h4>
 						<h5 class="fw-light">
 							Tel +39 0123 456 789<br>
 							email: urp@unigen.it
 						</h5>
 
-						<h4 class="alert-dark fw-normal mt-4">Studenti e Post-laurea</h4>
+						<h4 class=" fw-normal mt-4">Studenti e Post-laurea</h4>
 						<h5 class="fw-light">
 							Tel +39 0123 456 789<br>
 							email: studentipostlaurea@unigen.it
 						</h5>
 
-						<h4 class="alert-dark fw-normal mt-4">Ricerca</h4>
+						<h4 class=" fw-normal mt-4">Ricerca</h4>
 						<h5 class="fw-light">
 							Tel +39 0123 456 789<br>
 							email: ricerca@unigen.it
 						</h5>
 
-						<h4 class="alert-dark fw-normal mt-4">International</h4>
+						<h4 class=" fw-normal mt-4">International</h4>
 						<h5 class="fw-light">
 							Tel +39 0123 456 789<br>
 							email: international@unigen.it<br>
