--- a/AreaPubblica/Views/Didattica/Seduta.cshtml
+++ b/AreaPubblica/Views/Didattica/Seduta.cshtml
@@ -5,15 +5,15 @@
 }
 <div style="height:15vh;"></div>
 
-<div class="row justify-content-center">
-    <div class="col-10 text-start">
+<div class="ms-5 mt-4 ">
+    <div class="text-start">
         <h1 class="fw-bold">
             Sedute di Laurea
         </h1>
         <h2 class="mt-4 fw-bold">
             Cerimonia di laurea triennale
         </h2>
-        <h5 class="mt-3 fw-normal">
+        <p class="mt-3">
             La consegna dei diplomi di laurea triennale della sessione straordinaria 2023/24 si svolgerà venerdì 9 maggio 2025 in due cerimonie: la prima alle ore 10.00, la seconda alle ore 13.30.<br />
 
             Le laureate e i laureati potranno scegliere indistintamente e fino ad esaurimento dei posti disponibili, la cerimonia di preferenza. In ogni caso saranno garantiti i posti per tutte/i.<br />
@@ -23,7 +23,7 @@
             Tutte le informazioni di dettaglio saranno disponibili nella pagina del programma.<br />
 
             La cerimonia di laurea per i laureati e le laureate triennali della sessione estiva e autunnale 2024/25 si terranno rispettivamente nei giorni 11 e 12 novembre 2025.<br />
-        </h5>
+        </p>
 
         <div class="accordion shadow-sm rounded mt-4" id="faqAccordion">
             <div class="accordion-item">
@@ -84,7 +84,7 @@
         <h2 class="mt-5 fw-bold">
             Disposizioni per l'accesso
         </h2>
-        <h5 class="mt-3 fw-normal">
+        <p class="mt-3">
             Laureati e laureate si dovranno presentare in Piazza, accompagnati al massimo da due persone, alle quale verrà assegnato un posto a sedere nell'area dedicata agli ospiti.<br />
 
             Gli ingressi saranno aperti 45 minuti prima dell'orario di inizio. L'accesso all'area riservata sarà consentito fino a 15 minuti prima dell'inizio della cerimonia.<br />
@@ -96,7 +96,7 @@
 
             Si ricorda che la permanenza in piazza, considerata la durata della cerimonia e le procedure per l’accesso e uscita dall'area, sarà di circa tre ore.<br />
             Si evidenzia inoltre che la cerimonia si svolgerà all'aperto e pertanto sarà soggetta agli eventi atmosferici: vi invitiamo quindi a prendere le necessarie precauzioni.<br />
-        </h5>
+        </p>
     </div>
 </div>
 
