--- a/AreaPubblica/Views/FAQ/Index.cshtml
+++ b/AreaPubblica/Views/FAQ/Index.cshtml
@@ -5,7 +5,7 @@
     <div class="accordion" id="faqAccordion">
         <div class="accordion-item">
             <h2 class="accordion-header" id="heading1">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"
                         aria-expanded="false" aria-controls="collapse1">
                     1. Come ci si iscrive all’università?
                 </button>
