--- a/AreaPubblica/Views/Privacy/Index.cshtml
+++ b/AreaPubblica/Views/Privacy/Index.cshtml
@@ -2,9 +2,9 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <div style="height:15vh;"></div>
-<div class="row">
-<div class="col-2"></div>
-<div class="col-10">
+@* <div class="row">
+<div class="col-2"></div> *@
+<div class="ms-5 mt-4">
     <h1 style="font-size:60px;"> Informativa sulla Privacy</h1>
 
 
