--- a/AreaPubblica/Views/Privacy/Index.cshtml
+++ b/AreaPubblica/Views/Privacy/Index.cshtml
@@ -50,7 +50,71 @@
 
     <p>
         <strong>6. Cookie</strong><br>
-        Il sito utilizza cookie tecnici e, previo consenso, di profilazione. Per maggiori informazioni, consulta la [Cookie Policy].
+        Il sito utilizza cookie tecnici e, previo consenso, di profilazione. 
+        Cookie Policy
+        Cosa sono i cookie
+        I cookie sono piccoli file di testo che i siti visitati dagli utenti inviano ai loro terminali, dove vengono memorizzati per essere poi ritrasmessi agli stessi siti in occasione di visite successive. I cookie permettono al sito di riconoscere il dispositivo dell’utente, migliorare l’esperienza di navigazione e raccogliere informazioni in forma aggregata o individuale.
+
+        Tipologie di cookie utilizzati
+
+        <ul>
+
+        <il>
+
+        1. Cookie Tecnici (necessari)
+        Questi cookie sono essenziali per il corretto funzionamento del sito e per fornire il servizio richiesto dall’utente. Vengono utilizzati, ad esempio, per:
+
+        Memorizzare la lingua o le preferenze di navigazione
+
+        Gestire la sessione di login
+
+        Garantire la sicurezza del sito
+
+        Non richiedono il consenso dell’utente.
+        </il>
+
+        <il>
+
+        2. Cookie di Profilazione (previo consenso) <br />
+        Questi cookie vengono utilizzati per tracciare la navigazione dell’utente e creare profili sulle sue preferenze, abitudini, scelte, ecc. Possono essere utilizzati, ad esempio, per:
+
+        Inviare pubblicità mirata <br />
+
+        Mostrare contenuti personalizzati <br />
+        Sono installati solo previo consenso esplicito dell’utente.<br />
+
+        Cookie di terze parti
+        Alcuni cookie potrebbero essere installati da servizi di terze parti (ad es. social media, servizi di analisi o pubblicità) integrati nel nostro sito. L’uso di questi cookie è soggetto alle politiche delle terze parti stesse.
+        </il>
+        </ul>
+
+        Esempi di servizi di terze parti:
+        Google Analytics
+
+        Facebook Pixel
+
+        YouTube
+
+        Google Ads
+
+        Gestione del consenso
+        Al primo accesso al sito, l’utente può accettare o rifiutare l’uso dei cookie di profilazione tramite un banner. In qualsiasi momento, è possibile modificare o revocare il consenso cliccando sull’apposita area “Impostazioni cookie” presente nel sito.
+
+        Come disabilitare i cookie dal browser
+        L’utente può gestire o disabilitare i cookie direttamente dalle impostazioni del proprio browser. Ecco alcuni link utili:
+
+        Chrome
+
+        Firefox
+
+        Safari
+
+        Edge
+
+        Titolare del trattamento
+        Nome Azienda/Sito Web
+        Indirizzo
+        Email di contatto
     </p>
     <p></p>
     <p></p>
