completate modifiche per testing

--- a/AreaPubblica/Views/Didattica/Index.cshtml
+++ b/AreaPubblica/Views/Didattica/Index.cshtml
@@ -1,14 +1,10 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@{
-}
-<div style="height:15vh;">
-</div>
+<div style="height:15vh;"></div>
 
-<div class="row">
-	<div class="col-2"></div>
-	<div class="col-10">
+<div class="container ms-5 mt-4 mb-5 row">
+	<div class="col-12">
 		<h1>
 			Calendario accademico e appelli d'esame
 		</h1>
@@ -20,56 +16,52 @@
 			Il calendario accademico contiene:
 		</h5>
 		<ul>
-			<li>
-				Scadenze amministrative (per iscrizioni, pagamenti, domanda di laurea, ecc.)
-			</li>
-			<li>
-				Scadenze didattiche (inizio e fine dei periodi di lezione, sessioni degli esami e delle lauree, ecc.)
-			</li>
-			<li>
-				Chiusure di Ateneo
-			</li>
+			<li>Scadenze amministrative (per iscrizioni, pagamenti, domanda di laurea, ecc.)</li>
+			<li>Scadenze didattiche (inizio e fine dei periodi di lezione, sessioni degli esami e delle lauree, ecc.)</li>
+			<li>Chiusure di Ateneo</li>
 		</ul>
+
+		<!-- CARDS -->
 		<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 45vw">
 			<div class="card-body">
-				<h5 class="card-title">01 Maggio 2025</h5>
-				<p class="card-text">Inizio Chiusura di Ateneo (fino al 02/05/2025)</p>
+				<h5 class="card-title fw-bold">01 Maggio 2025</h5>
+				<p class="card-text">Inizio Chiusura di Ateneo (fino al <b>02/05/2025</b>)</p>
 			</div>
 		</div>
 		<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 45vw">
 			<div class="card-body">
-				<h5 class="card-title">07 Maggio 2025</h5>
+				<h5 class="card-title fw-bold">07 Maggio 2025</h5>
 				<p class="card-text">Fine II semestre</p>
 			</div>
 		</div>
 		<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 45vw">
 			<div class="card-body">
-				<h5 class="card-title">19 Maggio 2025</h5>
-				<p class="card-text">Inizio Recupero lezioni II semestre(fino al 24/05/2025)</p>
+				<h5 class="card-title fw-bold">19 Maggio 2025</h5>
+				<p class="card-text">Inizio Recupero lezioni II semestre (fino al <b>24/05/2025</b>)</p>
 			</div>
 		</div>
 		<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 45vw">
 			<div class="card-body">
-				<h5 class="card-title">26 Maggio 2025</h5>
-				<p class="card-text">Inizio Sessione esami maggio-giugno - area economica/umanistica (fino al 21/06/2025)</p>
+				<h5 class="card-title fw-bold">26 Maggio 2025</h5>
+				<p class="card-text">Inizio Sessione esami maggio-giugno - area economica/umanistica (fino al <b>21/06/2025</b>)</p>
 			</div>
 		</div>
 		<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 45vw">
 			<div class="card-body">
-				<h5 class="card-title">26 Maggio 2025</h5>
-				<p class="card-text">Inizio Sessione esami maggio-giugno - area linguistica/scientifica (fino al 28/06/2025)</p>
+				<h5 class="card-title fw-bold">26 Maggio 2025</h5>
+				<p class="card-text">Inizio Sessione esami maggio-giugno - area linguistica/scientifica (fino al <b>28/06/2025</b>)</p>
 			</div>
 		</div>
 		<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 45vw">
 			<div class="card-body">
-				<h5 class="card-title">21 Giugno 2025</h5>
-				<p class="card-text">Fine Sessione esami maggio-giugno - area economica/umanistica</p>
+				<h5 class="card-title fw-bold">21 Giugno 2025</h5>
+				<p class="card-text">Fine Sessione esami <b>maggio-giugno</b> - area economica/umanistica</p>
 			</div>
 		</div>
 		<div class="card mt-3 mb-3 shadow-sm rounded" style="width: 45vw">
 			<div class="card-body">
-				<h5 class="card-title">28 Giugno 2025</h5>
-				<p class="card-text">Fine Sessione esami maggio-giugno - area linguistica/scientifica</p>
+				<h5 class="card-title fw-bold">28 Giugno 2025</h5>
+				<p class="card-text">Fine Sessione esami <b>maggio-giugno</b> - area linguistica/scientifica</p>
 			</div>
 		</div>
 	</div>
