--- a/AreaPubblica/Views/Didattica/Seduta.cshtml
+++ b/AreaPubblica/Views/Didattica/Seduta.cshtml
@@ -5,7 +5,7 @@
 }
 <div style="height:15vh;"></div>
 
-<div class="ms-5 mt-4 ">
+<div class=" container ms-5 mt-4 ">
     <div class="text-start">
         <h1 class="fw-bold">
             Sedute di Laurea
@@ -14,11 +14,11 @@
             Cerimonia di laurea triennale
         </h2>
         <p class="mt-3">
-            La consegna dei diplomi di laurea triennale della sessione straordinaria 2023/24 si svolgerà venerdì 9 maggio 2025 in due cerimonie: la prima alle ore 10.00, la seconda alle ore 13.30.<br />
+            La consegna dei diplomi di laurea triennale della sessione straordinaria 2023/24 si svolgerà venerdì 9 maggio 2025 in due cerimonie: la prima alle ore 10:00, la seconda alle ore 13:30.<br />
 
             Le laureate e i laureati potranno scegliere indistintamente e fino ad esaurimento dei posti disponibili, la cerimonia di preferenza. In ogni caso saranno garantiti i posti per tutte/i.<br />
 
-            La procedura di prenotazione sarà attiva a partire dalle ore 10.00 di domenica 20 aprile e fino alle ore 12.00 di mercoledì 30 aprile 2025.<br />
+            La procedura di prenotazione sarà attiva a partire dalle ore 10:00 di domenica 20 aprile e fino alle ore 12:00 di mercoledì 30 aprile 2025.<br />
 
             Tutte le informazioni di dettaglio saranno disponibili nella pagina del programma.<br />
 
@@ -30,23 +30,23 @@
                 <h2 class="accordion-header" id="heading1">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1"
                             aria-expanded="false" aria-controls="collapse1">
-                        Venerdì 9 maggio 2025, ore 10.00
+                        Venerdì 9 maggio 2025, ore 10:00
                     </button>
                 </h2>
                 <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1">
                     <div class="accordion-body">
                         <ul>
                             <li>
-                                10.00 Saluto della Rettrice Andrea Tiziani, saluto delle autorità
+                                10:00 Saluto della Rettrice Andrea Tiziani, saluto delle autorità
                             </li>
                             <li>
-                                10.20 Discorso miglior studente/studentessa della sessione
+                                10:20 Discorso miglior studente/studentessa della sessione
                             </li>
                             <li>
-                                10.30 Consegna diplomi di laurea e Proclamazione dei laureati e delle laureate
+                                10:30 Consegna diplomi di laurea e Proclamazione dei laureati e delle laureate
                             </li>
                             <li>
-                                11.30 Orario indicativo termine cerimonia
+                                11:30 Orario indicativo termine cerimonia
                             </li>
                         </ul>
                     </div>
@@ -57,23 +57,23 @@
                 <h2 class="accordion-header" id="heading2">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                             data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                        Venerdì 9 maggio 2025, ore 13.30
+                        Venerdì 9 maggio 2025, ore 13:30
                     </button>
                 </h2>
                 <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2">
                     <div class="accordion-body">
                         <ul>
                             <li>
-                                13.30 Saluto della Rettrice Andrea Tiziani, saluto delle autorità
+                                13:30 Saluto della Rettrice Andrea Tiziani, saluto delle autorità
                             </li>
                             <li>
-                                13.50 Discorso miglior studente/studentessa della sessione
+                                13:50 Discorso miglior studente/studentessa della sessione
                             </li>
                             <li>
-                                14.00 Consegna diplomi di laurea e Proclamazione dei laureati e delle laureate
+                                14:00 Consegna diplomi di laurea e Proclamazione dei laureati e delle laureate
                             </li>
                             <li>
-                                15.00 Orario indicativo termine cerimonia
+                                15:00 Orario indicativo termine cerimonia
                             </li>
                         </ul>
                     </div>
