--- a/AreaDocente/Views/Appelli/Edit.cshtml
+++ b/AreaDocente/Views/Appelli/Edit.cshtml
@@ -54,12 +54,15 @@
                     <input type="datetime-local" class="form-control" id="DataOrale" asp-for="DataOrale" name="DataOrale" />
                 </div>
 
-                <div class="mt-4 d-flex justify-content-between">
-                    <button type="submit" class="btn btn-primary btn-lg">
+                <div class="mt-4 d-flex justify-content-end gap-2">
+                    <button type="submit" class="btn btn-success btn-lg">
                         <i class="bi bi-pencil-square me-1"></i> Modifica
                     </button>
-                    <button type="submit" class="btn btn-danger btn-lg ms-3" asp-controller="Appelli" asp-action="Delete">
+                    <button type="submit" class="btn btn-danger btn-lg " asp-controller="Appelli" asp-action="Delete">
                         <i class="bi bi-trash me-1"></i> Elimina
+                    </button>
+                    <button type="submit" class="btn btn-secondary btn-lg" asp-controller="Appelli" asp-action="Annulla">
+                        <i class="bi bi-arrow-90deg-left me-1"></i> Annulla
                     </button>
                 </div>
 
