--- a/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
+++ b/AreaPubblica/Views/OffertaFormativa/ElencoCorsiCompleti.cshtml
@@ -9,10 +9,12 @@
 <div class="container mb-5" style="padding-top: 120px;">
 	<div class="row">
 		<h1 class="mb-4">Corsi di Laurea</h1>
+
+		<!-- Colonna sinistra: testo + accordion -->
 		<div class="col-md-8">
 			<p>
-				La nostra università online propone una vasta gamma di corsi di laurea, pensati per rispondere alle esigenze di formazione nei più diversi ambiti disciplinari.
-				L’offerta comprende percorsi di laurea triennale, magistrale e a ciclo unico, così da permettere a ogni studente di scegliere il cammino più adatto ai propri interessi
+				La nostra università online propone una vasta gamma di <b>corsi di laurea</b>, pensati per rispondere alle esigenze di formazione nei più diversi ambiti disciplinari.
+				L’offerta comprende <b>percorsi di laurea triennale, magistrale e a ciclo unico</b>, così da permettere a ogni studente di scegliere il cammino più adatto ai propri interessi
 				e obiettivi professionali. Ogni corso è progettato per offrire una preparazione solida, aggiornata e in linea con le richieste del mondo del lavoro,
 				mantenendo al tempo stesso la flessibilità tipica della didattica online. Qualunque sia il tuo percorso, troverai un ambiente dinamico, accessibile e orientato al supporto costante
 				dello studente.
@@ -65,13 +67,12 @@
 			</div>
 		</div>
 
+		<!-- Colonna destra: immagine -->
 		<div class="col-md-4 d-flex align-items-start">
+			<img src="~/sources/cors.jpg" class="img-fluid roundedshadow" />
 		</div>
 	</div>
 </div>
 
-
-
-</div>
-<div style="height:42vh;">
-</div>
+<!-- Spazio in fondo -->
+<div style="height:42vh;"></div>
