--- a/AreaPubblica/Views/Privacy/Index.cshtml
+++ b/AreaPubblica/Views/Privacy/Index.cshtml
@@ -1,125 +1,162 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+	ViewData["Title"] = "Privacy Policy";
 }
 <div style="height:15vh;"></div>
 @* <div class="row">
 <div class="col-2"></div> *@
 <div class="ms-5 mt-4">
-    <h1 style="font-size:60px;"> Informativa sulla Privacy</h1>
+	<h1 style="font-size:60px;"> Informativa sulla Privacy</h1>
 
 
 
-    <p>Ultimo aggiornamento: 14 Aprile 2025</p>
+	<p>Ultimo aggiornamento: 14 Aprile 2025</p>
 
-    <p>La presente informativa descrive le modalità di gestione del sito web in riferimento al trattamento dei dati personali degli utenti che lo consultano. L’informativa è resa ai sensi del Regolamento (UE) 2016/679 (GDPR).</p>
+	<p>La presente informativa descrive le modalità di gestione del sito web in riferimento al trattamento dei dati personali degli utenti che lo consultano. L’informativa è resa ai sensi del Regolamento (UE) 2016/679 (GDPR).</p>
 
-    <p>
-        <strong>1. Titolare del Trattamento</strong><br>
-        Il titolare del trattamento dei dati è [Nome Azienda], con sede legale in [Indirizzo], contattabile all’indirizzo email: [email@email.it].
-    </p>
+	<div class="mb-4">
+		<strong>1. Titolare del Trattamento</strong><br>
+		Il titolare del trattamento dei dati è [Nome Azienda], con sede legale in [Indirizzo], contattabile all’indirizzo email: [email@email.it].
+	</div>
 
-    <p>
-        <strong>2. Dati Raccolti</strong><br>
-        Raccogliamo i seguenti dati:
-    </p>
-    <ul>
-        <li>Dati identificativi (nome, email, telefono)</li>
-        <li>Dati tecnici (IP, browser, dispositivo)</li>
-        <li>Dati forniti volontariamente tramite form di contatto o acquisto</li>
-    </ul>
+	<div class="mb-4">
+		<strong>2. Dati Raccolti</strong><br>
+		Raccogliamo i seguenti dati:
+	</div>
+	<ul>
+		<li>Dati identificativi (nome, email, telefono)</li>
+		<li>Dati tecnici (IP, browser, dispositivo)</li>
+		<li>Dati forniti volontariamente tramite form di contatto o acquisto</li>
+	</ul>
 
-    <p>
-        <strong>3. Finalità del Trattamento</strong><br>
-        I dati sono trattati per:
-    </p>
-    <ul>
-        <li>Rispondere a richieste e fornire servizi</li>
-        <li>Adempiere a obblighi legali</li>
-        <li>Finalità di marketing (previo consenso)</li>
-    </ul>
+	<div class="mb-4">
+		<strong>3. Finalità del Trattamento</strong><br>
+		I dati sono trattati per:
+	<ul>
+		<li>Rispondere a richieste e fornire servizi</li>
+		<li>Adempiere a obblighi legali</li>
+		<li>Finalità di marketing (previo consenso)</li>
+	</ul>
+	</div>
 
-    <p>
-        <strong>4. Conservazione dei Dati</strong><br>
-        I dati saranno conservati per il tempo strettamente necessario a conseguire gli scopi per cui sono stati raccolti.
-    </p>
+	<div class="mb-4">
+		<strong>4. Conservazione dei Dati</strong><br>
+		I dati saranno conservati per il tempo strettamente necessario a conseguire gli scopi per cui sono stati raccolti.
+	</div>
 
-    <p>
-        <strong>5. Diritti dell’Interessato</strong><br>
-        L’utente ha diritto di accedere, rettificare, cancellare, limitare o opporsi al trattamento dei dati, nonché alla portabilità degli stessi.
-    </p>
+	<div class="mb-4">
+		<strong>5. Diritti dell’Interessato</strong><br>
+		L’utente ha diritto di accedere, rettificare, cancellare, limitare o opporsi al trattamento dei dati, nonché alla portabilità degli stessi.
+	</div>
 
-    <p>
-        <strong>6. Cookie</strong><br>
-        Il sito utilizza cookie tecnici e, previo consenso, di profilazione. 
-        Cookie Policy
-        Cosa sono i cookie
-        I cookie sono piccoli file di testo che i siti visitati dagli utenti inviano ai loro terminali, dove vengono memorizzati per essere poi ritrasmessi agli stessi siti in occasione di visite successive. I cookie permettono al sito di riconoscere il dispositivo dell’utente, migliorare l’esperienza di navigazione e raccogliere informazioni in forma aggregata o individuale.
+	<div>
+		<strong>6. Cookie</strong><br>
+		Il sito utilizza cookie tecnici e, previo consenso, di profilazione. <br />
+		<b>Cookie Policy</b>
+		Cosa sono: <br />
+		I cookie sono piccoli file di testo che i siti visitati dagli utenti inviano ai loro terminali, dove vengono memorizzati per essere poi ritrasmessi agli stessi siti in occasione di visite successive. I cookie permettono al sito di riconoscere il dispositivo dell’utente, migliorare l’esperienza di navigazione e raccogliere informazioni in forma aggregata o individuale. <br />
 
-        Tipologie di cookie utilizzati
+		Tipologie di cookie utilizzati <br />
 
-        <ul>
+		<ul class="mb-4">
 
-        <il>
+			<li>
 
-        1. Cookie Tecnici (necessari)
-        Questi cookie sono essenziali per il corretto funzionamento del sito e per fornire il servizio richiesto dall’utente. Vengono utilizzati, ad esempio, per:
+				<strong>Cookie Tecnici (necessari)</strong>
+				Questi cookie sono essenziali per il corretto funzionamento del sito e per fornire il servizio richiesto dall’utente. <br />
+				Vengono utilizzati, ad esempio, per: Memorizzare la lingua o le preferenze di navigazione, gestire la sessione di login, garantire la sicurezza del sito. <br />
+				Non richiedono il consenso dell’utente.
+			</li>
 
-        Memorizzare la lingua o le preferenze di navigazione
+			<li>
 
-        Gestire la sessione di login
+				<strong>Cookie di Profilazione (previo consenso)</strong>
+				Questi cookie vengono utilizzati per tracciare la navigazione dell’utente e creare profili sulle sue preferenze, abitudini, scelte, ecc. <br />
+				Possono essere utilizzati, ad esempio, per: Inviare pubblicità mirata e mostrare contenuti personalizzati. Sono installati solo previo consenso esplicito dell’utente.
 
-        Garantire la sicurezza del sito
+			</li>
+		</ul>
 
-        Non richiedono il consenso dell’utente.
-        </il>
+		<p class="mb-2">
 
-        <il>
+		<b>Cookie di terze parti</b>
+		Alcuni cookie potrebbero essere installati da servizi di terze parti (ad es. social media, servizi di analisi o pubblicità) integrati nel nostro sito. L’uso di questi cookie è soggetto alle politiche delle terze parti stesse.
+		</p>
 
-        2. Cookie di Profilazione (previo consenso) <br />
-        Questi cookie vengono utilizzati per tracciare la navigazione dell’utente e creare profili sulle sue preferenze, abitudini, scelte, ecc. Possono essere utilizzati, ad esempio, per:
+		<p>
 
-        Inviare pubblicità mirata <br />
+		<b>Esempi di servizi di terze parti:</b>
+		</p>
 
-        Mostrare contenuti personalizzati <br />
-        Sono installati solo previo consenso esplicito dell’utente.<br />
 
-        Cookie di terze parti
-        Alcuni cookie potrebbero essere installati da servizi di terze parti (ad es. social media, servizi di analisi o pubblicità) integrati nel nostro sito. L’uso di questi cookie è soggetto alle politiche delle terze parti stesse.
-        </il>
-        </ul>
 
-        Esempi di servizi di terze parti:
-        Google Analytics
+		<ul>
 
-        Facebook Pixel
+			<li>
+				Google Analytics
+			</li>
 
-        YouTube
+			<li>
+				Facebook Pixel
+			</li>
 
-        Google Ads
+			<li>
+				YouTube
+			</li>
 
-        Gestione del consenso
-        Al primo accesso al sito, l’utente può accettare o rifiutare l’uso dei cookie di profilazione tramite un banner. In qualsiasi momento, è possibile modificare o revocare il consenso cliccando sull’apposita area “Impostazioni cookie” presente nel sito.
+			<li>
+				Google Ads
+			</li>
+		</ul>
 
-        Come disabilitare i cookie dal browser
-        L’utente può gestire o disabilitare i cookie direttamente dalle impostazioni del proprio browser. Ecco alcuni link utili:
 
-        Chrome
+		<b>Gestione del consenso</b>
+		Al primo accesso al sito, l’utente può accettare o rifiutare l’uso dei cookie di profilazione tramite un banner. In qualsiasi momento, è possibile modificare o revocare il consenso cliccando sull’apposita area <b>“Impostazioni cookie”</b> presente nel sito. <br />
 
-        Firefox
+		<b>Come disabilitare i cookie dal browser</b> <br />
+		L’utente può gestire o disabilitare i cookie direttamente dalle impostazioni del proprio browser. <br />
 
-        Safari
+		<b>Ecco alcuni link utili:</b>
 
-        Edge
+		<ul class="mb-4">
+			<li>
+				<a class="text-decoration-none" href="https://www.apple.com/legal/privacy/it/cookies/#:~:text=Se%20vuoi%20disabilitare%20i%20cookie,produttore%20come%20disabilitare%20i%20cookie.">Safari</a>
+			</li>
 
-        Titolare del trattamento
-        Nome Azienda/Sito Web
-        Indirizzo
-        Email di contatto
-    </p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
+			<li>
+				<a class="text-decoration-none" href="https://support.mozilla.org/it/kb/cookie-terze-parti-protezione-antitracciamento#:~:text=Disattivare%20i%20cookie%20di%20terze%20parti&text=e%20selezionare%20Impostazioni.,cookie%20che%20si%20desidera%20bloccare.">Firefox</a>
+			</li>
+
+			<li>
+				<a class="text-decoration-none" href="https://support.google.com/chrome/answer/95647?hl=it&co=GENIE.Platform%3DDesktop">Chrome</a>
+			</li>
+
+			<li>
+				<a class="text-decoration-none" href="https://support.microsoft.com/it-it/windows/gestire-i-cookie-in-microsoft-edge-visualizzare-consentire-bloccare-eliminare-e-usare-168dab11-0753-043d-7c16-ede5947fc64d#:~:text=Apri%20il%20browser%20Edge%2C%20seleziona%20Impostazioni%20e%20altro%20%3E%20Impostazioni%20%3E,cui%20vuoi%20eliminare%20i%20cookie.">Edge</a>
+			</li>
+
+		</ul>
+
+
+
+
+		<b>Titolare del trattamento</b> <br />
+		<ul>
+
+			<li>
+				GUniversità UniGen
+			</li>
+
+			<li>
+				Milano, MI 20100, IT
+			</li>
+
+			<li>
+				centralino@unigen.it
+			</li>
+
+		</ul>
+	</div>
+
 
 </div>
 </div>
