--- a/AreaPubblica/Views/Didattica/Seduta.cshtml
+++ b/AreaPubblica/Views/Didattica/Seduta.cshtml
@@ -7,10 +7,10 @@
 
 <div class=" container ms-5 mt-4 ">
     <div class="text-start">
-        <h1 class="fw-bold">
+        <h1>
             Sedute di Laurea
         </h1>
-        <h2 class="mt-4 fw-bold">
+        <h2 class="mt-4 ">
             Cerimonia di laurea triennale
         </h2>
         <p class="mt-3">
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <h2 class="mt-5 fw-bold">
+        <h2 class="mt-5">
             Disposizioni per l'accesso
         </h2>
         <p class="mt-3">
