--- a/Comunicazioni/Views/Comunicazioni/List.cshtml
+++ b/Comunicazioni/Views/Comunicazioni/List.cshtml
@@ -27,15 +27,15 @@
 									{
 										if (primaComunicazione.Studente != null && primaComunicazione.K_Soggetto == primaComunicazione.Studente.K_Studente)
 										{
-											<span>@($"{primaComunicazione.Studente.Nome} {primaComunicazione.Studente.Cognome} - {primaComunicazione.Soggetto}")</span>
+											<span class="text-primary">@($"{primaComunicazione.Studente.Nome} {primaComunicazione.Studente.Cognome}")</span>
 										}
 										else if (primaComunicazione.Docente != null && primaComunicazione.K_Soggetto == primaComunicazione.Docente.K_Docente)
 										{
-											<span>@($"{primaComunicazione.Docente.Nome} {primaComunicazione.Docente.Cognome} - {primaComunicazione.Soggetto}")</span>
+											<span class="text-primary">@($"{primaComunicazione.Docente.Nome} {primaComunicazione.Docente.Cognome}")</span>
 										}
 										else
 										{
-											<span>Amministrazione</span>
+											<span class="text-primary">Amministrazione</span>
 										}
 									}
 								}
