--- a/AreaAmministrazione/MasterPage.master
+++ b/AreaAmministrazione/MasterPage.master
@@ -95,7 +95,7 @@
             <main class="main-content">
                 <div class="d-flex justify-content-end">
                     <asp:Label ID="lblNomeUtente" runat="server" CssClass="fw-bold"></asp:Label>   
-                    <a href="Logout.aspx" class="btn btn-danger ms-4"><i class="bi bi-box-arrow-right"></i>Logout</a>
+                    <a href="https://localhost:7272/" class="btn btn-danger ms-4"><i class="bi bi-box-arrow-right"></i>Logout</a>
                 </div>
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
